--- a/index_style.css
+++ b/index_style.css
@@ -29,18 +29,22 @@ html[data-theme="dark"] {
         --accent: var(--accent-dark);
 }
 
-body, #sidebar, .infobox, .chapbar{
-    font-family: 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+
+body, #sidebar, .infobox{
     display: flex;
     color: rgba(var(--text));
+    overflow-x: hidden;
+    transition: color 1s;
+    font-family: 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
 body{
     background-color: rgba(var(--background));
     flex-direction: column;
-    margin: 0;
+    justify-content: center;
     text-align: center;
-    align-items: center;
+    margin: 0;
+    transition: background-color 1s;
 }
 
 header{
@@ -49,28 +53,41 @@ header{
     position: fixed;
     border-radius: 50px;
     background: rgba(var(--background), 1);
-    box-shadow: 5px 3px 3px #DDDDDD33;
+    border: 3px outset rgb(var(--accent));
     z-index: 10;
+    opacity: 20%;
+    transition: opacity 5s;
 }
 
+header:hover{
+    background-color: rgb(var(--accent));
+    opacity: 1;
+    transition : 0.5s;
+}
 
 #sidebar{
     border: 3px hidden;
-    border-radius: 6px;
+    border-top-right-radius: 6px;
+    border-bottom-right-radius: 6px;
     position: fixed;
     overflow: hidden;
     flex-direction: column;
     top: 25vh;
-    left: -5px;
+    width: auto;
+    transform: translateX(-92%);
     height: 50%;
     box-shadow: 5px 3px 3px #DDDDDD33;
     background: radial-gradient(circle at center, rgba(var(--primary), .8), rgba(var(--accent), 1) 100%);
-    width: 10px;
-    transition: width 0.5s ease;
+    z-index: 10;
+    opacity: 20%;
+    transition: opacity 5s, transform 0.5s;
 }
 
+
 #sidebar:hover {
-    width: auto;
+    transform: translateX(0%);
+    transition: 0.5s;
+    cursor: pointer;
 }
 
 #sidebar ul{
@@ -93,14 +110,14 @@ img{
     width: 40px;
 }
 
+
 a:hover img{
     background-color: rgba(var(--accent), .3);
     border-radius: 10px;
+    color: rgba(var(--background));
+    cursor: pointer;
 }
 
-a:hover{
-    color: rgba(var(--background));
-}
 
 #themebttn{
     border-radius: 25px;
@@ -120,6 +137,7 @@ a:hover{
     font-size: 25px;
     padding: 5px;   
 }
+
 
 h1{
     background: -webkit-linear-gradient(bottom right, rgba(var(--text)) 0%, rgba(var(--accent)) 50%,rgba(var(--primary)) 95%);
@@ -164,4 +182,14 @@ footer{
 ::-webkit-scrollbar-thumb:hover {
     background: rgba(var(--primary), 255);
   }
-  
+
+.hidden{
+    opacity: 0;
+    transition: all 1s;
+    transform: translateY(-20%);
+}
+
+.show{
+    opacity: 1;
+    transform: translateY(0);
+}
