--- a/win/win_style.css
+++ b/win/win_style.css
@@ -105,6 +105,7 @@ header:hover{
 }
 
 #sidebar:hover {
+    opacity: 1;
     transform: translateX(0%);
     transition: 0.5s;
     cursor: pointer;
